; ModuleID = '/home/carl/AnghaBench/RetroArch/ctr/extr_gpu_old.c_GPU_SetDepthTestAndWriteMask.c'
source_filename = "/home/carl/AnghaBench/RetroArch/ctr/extr_gpu_old.c_GPU_SetDepthTestAndWriteMask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPUREG_DEPTH_COLOR_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GPU_SetDepthTestAndWriteMask(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @GPUREG_DEPTH_COLOR_MASK, align 4
  %8 = load i32, i32* %4, align 4
  %9 = and i32 %8, 1
  %10 = load i32, i32* %5, align 4
  %11 = and i32 %10, 7
  %12 = shl i32 %11, 4
  %13 = or i32 %9, %12
  %14 = load i32, i32* %6, align 4
  %15 = shl i32 %14, 8
  %16 = or i32 %13, %15
  %17 = call i32 @GPUCMD_AddWrite(i32 %7, i32 %16)
  ret void
}

declare dso_local i32 @GPUCMD_AddWrite(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
